--- a/manifest.yml
+++ b/manifest.yml
@@ -2,7 +2,8 @@
 applications:
 - name: pal-tracker
   path: build/libs/pal-tracker.jar
-  random-route: true
+  routes:
+  - route: pal-tracker-addc32f9-755b-4dfa-b7cf-6f141f8ac1ea.apps.evans.pal.pivotal.io
   env:
-    WELCOME_MESSAGE: Hello from Cloud Foundry
+    WELCOME_MESSAGE: Hello from the review environment
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
