--- a/manifest.yml
+++ b/manifest.yml
@@ -5,5 +5,5 @@ applications:
     routes:
       - route: pal-tracker-addc32f9-755b-4dfa-b7cf-6f141f8ac1ea.apps.evans.pal.pivotal.io
     env:
-      WELCOME_MESSAGE: Hello from the review environment
+      WELCOME_MESSAGE: "Hello from the review environment"
       JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
